# obs-custrnn

./: .clang-format  CMakeLists.txt  README.md  buildspec.json
src/: noise_supress_filter_cust.c  plugin-macros.h.in  plugin-main.c  plugin-support.c.in  plugin-support.h
src/rnnoise/include/: rnnoise.h
src/rnnoise/src/: _kiss_fft_guts.h  arch.h  celt_lpc.c  celt_lpc.h  common.h  denoise.c  kiss_fft.c  kiss_fft.h  opus_types.h  pitch.c  pitch.h  rnn.c  rnn.h  rnn_data.c  rnn_data.h  rnn_reader.c  tansig_table.h
